# gloomhaven

./: .gitignore  README.md  analyze_deck.ipynb  example.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yml  tests.yml
assets/: advantage_cdfs.html  advantage_summary_stats.html  base_deck_cdfs.html  base_deck_summary_stats.html  cdfs.html  perk_comparison.html  summary_stats.html
decks/: Soothsinger.yaml
examples/: advantage.ipynb  base.ipynb  compare_perks.ipynb  soothsinger.ipynb
gloomhaven/: __init__.py  constants.py  deck.py  mod_applier.py  reader.py  render.py
gloomhaven/templates/: table.html  tables.html
tests/: test_basic.py
