[tool.poetry]
name = "gloomhaven"
packages = [
    { include = "gloomhaven" },
]
version = "0.2.0"
description = "Probability evaluation of Gloomhaven attack modifier decks"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7,<4"
PyYAML = "^5.4.1"
Jinja2 = "^3.0.1"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" 