[tool.poetry]
name = "gloomhaven"
packages = [
    { include = "gloomhaven" },
]
version = "0.2.0"
description = "Probability evaluation of Gloomhaven attack modifier decks"
authors = ["Zachary Coleman <zacharywcoleman@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/zachcoleman/gloomhaven"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
PyYAML = "^5.4.1"
Jinja2 = "^3.0.1"
pandas = {version = "^1.3.3", optional = true}
dask = {extras = ["distributed"], version = "^2021.9.0", optional = true}
matplotlib = {version = "^3.4.3", optional = true}
jupyter = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
analyze = ["pandas", "dask", "matplotlib", "jupyter"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" 